--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 dist
 node_modules
 .DS_Store
+toon/test/fixtures/*.json
+toon/test/fixtures/*.toon
+toon/dist
+toon/node_modules
+toon/package-lock.json
+yarn.lock
 .env
-docs/.vitepress/dist
-docs/.vitepress/cache
-packages/toon/test/fixtures/*.json
-packages/toon/test/fixtures/*.toon
