--- a/toon/package.json
+++ b/toon/package.json
@@ -2,7 +2,7 @@
   "name": "@toon-format/toon",
   "type": "module",
   "version": "1.3.0",
-  "packageManager": "pnpm@10.21.0",
+  "packageManager": "yarn@1.22.22",
   "description": "Token-Oriented Object Notation (TOON) – Compact, human-readable, schema-aware encoding of JSON for LLM prompts",
   "author": "Johann Schopplich <hello@johannschopplich.com>",
   "license": "MIT",
